Restored OSGI/module build.